Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-1497

Lustre client build on SLES SP0 is broken

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.3.0
    • Lustre 2.2.0, Lustre 2.3.0
    • Lustre client running a SLES SP0 environment.
    • 3
    • 4525

      To test some changes I did for another ticket I had to pull out my old SuSE SP0 client build environment for testing. In the process the builds failed for Lustre master branch as well as Lustre 2.2.0 branch. Patches are available for fixing these problems.

            pjones Peter Jones
            simmonsja James A Simmons
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: